src/main/java/io/spotnext/kawa/lang/parser/KawaParser.java
// Generated from /Users/matthias/Projekte/kawa-lang/src/main/java/io/spotnext/kawa/lang/parser/Kawa.g4 by ANTLR 4.7.1
package io.spotnext.kawa.lang.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KawaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, OPTIONAL=9, 
		OF_OERATOR=10, ARRAY_EMPTY=11, DOT_OPERATOR=12, DOT_DOT_OPERATOR=13, OPTIONAL_DOT_OPERATOR=14, 
		BOOLEAN_LITERAL=15, NULL_LITERAL=16, STRING_LITERAL=17, INTEGER_LITERAL=18, 
		LONG_LITERAL=19, FLOAT_LITERAL=20, DOUBLE_LITERAL=21, HEX_NUMERIC_LITERAL=22, 
		PACKAGE=23, CLASS=24, INTERFACE=25, ENUM=26, STRUCT=27, ANNOTATION=28, 
		VARIABLE=29, FINAL_VARIABLE=30, METHOD=31, AS=32, THROW=33, THROWS=34, 
		RETURN=35, IMPORT=36, THIS=37, SUPER=38, IF=39, ELSE=40, WHILE=41, FOR=42, 
		FOREACH=43, CONTINUE=44, BREAK=45, YIELD=46, TRY=47, CATCH=48, SWITCH=49, 
		CASE=50, IMPLEMENTS=51, EXTENDS=52, PRIVATE=53, PROTECTED=54, PUBLIC=55, 
		NATIVE=56, VOLATILE=57, ABSTRACT=58, DEFAULT=59, ASYNC=60, STATIC=61, 
		SYNCHRONIZED=62, IS=63, NOT=64, NEGATE=65, ASSIGN=66, EQUALS=67, NOT_EQUALS=68, 
		NOT_EQUALS_LT_GT=69, LIKE=70, NOT_LIKE=71, GREATER_THAN=72, GREATER_THAN_OR_EQUAL=73, 
		LESS_THAN=74, LESS_THAN_OR_EQUAL=75, OR=76, OR_BINARY=77, AND=78, AND_BINARY=79, 
		ADD=80, SUBTRACT=81, DIVIDE=82, MULTIPLY=83, MODULUS=84, INCREMET=85, 
		DECREMENT=86, INCREMENT_AND_ASSIGN=87, DECREMENT_AND_ASSIGN=88, MULTIPLY_AND_ASSIGN=89, 
		DIVIDE_AND_ASSIGN=90, MODULUS_AND_ASSIGN=91, IDENTIFIER=92, BLOCK_COMMENT=93, 
		LINE_COMMENT=94, WHITESPACE=95;
	public static final int
		RULE_qualifiedTypeName = 0, RULE_qualifiedTypeNameElement = 1, RULE_qualifiedmemberNameElement = 2, 
		RULE_importsDeclaration = 3, RULE_importRename = 4, RULE_packageName = 5, 
		RULE_packageDeclaration = 6, RULE_compilationUnit = 7, RULE_extendsDeclaration = 8, 
		RULE_implementsDeclaration = 9, RULE_genericArgument = 10, RULE_genericArguments = 11, 
		RULE_classModifiers = 12, RULE_className = 13, RULE_classDeclaration = 14, 
		RULE_interfaceModifiers = 15, RULE_interfaceName = 16, RULE_interfaceDeclaration = 17, 
		RULE_enumModifiers = 18, RULE_enumName = 19, RULE_enumValueDeclarationArgument = 20, 
		RULE_enumValueDeclarationArguments = 21, RULE_enumValueDeclaration = 22, 
		RULE_enumValueDeclarations = 23, RULE_enumDeclaration = 24, RULE_structModifiers = 25, 
		RULE_structName = 26, RULE_structDeclaration = 27, RULE_annotationModifiers = 28, 
		RULE_annotationName = 29, RULE_annotationValue = 30, RULE_annotationDeclaration = 31, 
		RULE_typeLiteral = 32, RULE_casting = 33, RULE_literal = 34, RULE_memberVisibilityModifiers = 35, 
		RULE_assignment = 36, RULE_arguments = 37, RULE_variableName = 38, RULE_variableAccess = 39, 
		RULE_variableDeclaration = 40, RULE_fieldDeclaration = 41, RULE_methodModifiers = 42, 
		RULE_methodName = 43, RULE_methodParameter = 44, RULE_methodParameters = 45, 
		RULE_methodDeclaration = 46, RULE_returnStatement = 47, RULE_methodArguments = 48, 
		RULE_methodInvocation = 49, RULE_variableAssignment = 50, RULE_codeBlock = 51, 
		RULE_listInitialization = 52, RULE_mapKeyValue = 53, RULE_mapKeyValues = 54, 
		RULE_mapInitialization = 55, RULE_test_fieldDeclarations = 56, RULE_test_methodDeclarations = 57;
	public static final String[] ruleNames = {
		"qualifiedTypeName", "qualifiedTypeNameElement", "qualifiedmemberNameElement", 
		"importsDeclaration", "importRename", "packageName", "packageDeclaration", 
		"compilationUnit", "extendsDeclaration", "implementsDeclaration", "genericArgument", 
		"genericArguments", "classModifiers", "className", "classDeclaration", 
		"interfaceModifiers", "interfaceName", "interfaceDeclaration", "enumModifiers", 
		"enumName", "enumValueDeclarationArgument", "enumValueDeclarationArguments", 
		"enumValueDeclaration", "enumValueDeclarations", "enumDeclaration", "structModifiers", 
		"structName", "structDeclaration", "annotationModifiers", "annotationName", 
		"annotationValue", "annotationDeclaration", "typeLiteral", "casting", 
		"literal", "memberVisibilityModifiers", "assignment", "arguments", "variableName", 
		"variableAccess", "variableDeclaration", "fieldDeclaration", "methodModifiers", 
		"methodName", "methodParameter", "methodParameters", "methodDeclaration", 
		"returnStatement", "methodArguments", "methodInvocation", "variableAssignment", 
		"codeBlock", "listInitialization", "mapKeyValue", "mapKeyValues", "mapInitialization", 
		"test_fieldDeclarations", "test_methodDeclarations"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "'}'", "','", "'('", "')'", "';'", "'['", "']'", null, null, 
		"'[]'", null, null, null, null, "'null'", null, null, null, null, null, 
		null, "'package'", "'class'", "'interface'", "'enum'", "'struct'", "'annotation'", 
		"'var'", null, "'def'", "'as'", "'throw'", "'throws'", "'return'", "'import'", 
		"'this'", "'super'", "'if'", "'else'", "'while'", "'for'", "'foreach'", 
		"'continue'", "'break'", "'yield'", "'try'", "'catch'", "'switch'", "'case'", 
		"'implements'", "'extends'", "'@private'", "'@protected'", "'@public'", 
		"'@native'", "'@volatile'", "'@abstract'", "'@default'", "'@async'", "'@static'", 
		"'@synchronized'", "'is'", "'not'", "'!'", null, null, null, "'<>'", "'~'", 
		"'!~'", "'>'", "'>='", "'<'", "'<='", "'|'", "'||'", "'&'", "'&&'", null, 
		null, "'/'", "'*'", "'%'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, "OPTIONAL", "OF_OERATOR", 
		"ARRAY_EMPTY", "DOT_OPERATOR", "DOT_DOT_OPERATOR", "OPTIONAL_DOT_OPERATOR", 
		"BOOLEAN_LITERAL", "NULL_LITERAL", "STRING_LITERAL", "INTEGER_LITERAL", 
		"LONG_LITERAL", "FLOAT_LITERAL", "DOUBLE_LITERAL", "HEX_NUMERIC_LITERAL", 
		"PACKAGE", "CLASS", "INTERFACE", "ENUM", "STRUCT", "ANNOTATION", "VARIABLE", 
		"FINAL_VARIABLE", "METHOD", "AS", "THROW", "THROWS", "RETURN", "IMPORT", 
		"THIS", "SUPER", "IF", "ELSE", "WHILE", "FOR", "FOREACH", "CONTINUE", 
		"BREAK", "YIELD", "TRY", "CATCH", "SWITCH", "CASE", "IMPLEMENTS", "EXTENDS", 
		"PRIVATE", "PROTECTED", "PUBLIC", "NATIVE", "VOLATILE", "ABSTRACT", "DEFAULT", 
		"ASYNC", "STATIC", "SYNCHRONIZED", "IS", "NOT", "NEGATE", "ASSIGN", "EQUALS", 
		"NOT_EQUALS", "NOT_EQUALS_LT_GT", "LIKE", "NOT_LIKE", "GREATER_THAN", 
		"GREATER_THAN_OR_EQUAL", "LESS_THAN", "LESS_THAN_OR_EQUAL", "OR", "OR_BINARY", 
		"AND", "AND_BINARY", "ADD", "SUBTRACT", "DIVIDE", "MULTIPLY", "MODULUS", 
		"INCREMET", "DECREMENT", "INCREMENT_AND_ASSIGN", "DECREMENT_AND_ASSIGN", 
		"MULTIPLY_AND_ASSIGN", "DIVIDE_AND_ASSIGN", "MODULUS_AND_ASSIGN", "IDENTIFIER", 
		"BLOCK_COMMENT", "LINE_COMMENT", "WHITESPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Kawa.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KawaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QualifiedTypeNameContext extends ParserRuleContext {
		public List<QualifiedTypeNameElementContext> qualifiedTypeNameElement() {
			return getRuleContexts(QualifiedTypeNameElementContext.class);
		}
		public QualifiedTypeNameElementContext qualifiedTypeNameElement(int i) {
			return getRuleContext(QualifiedTypeNameElementContext.class,i);
		}
		public List<TerminalNode> DOT_OPERATOR() { return getTokens(KawaParser.DOT_OPERATOR); }
		public TerminalNode DOT_OPERATOR(int i) {
			return getToken(KawaParser.DOT_OPERATOR, i);
		}
		public QualifiedTypeNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedTypeName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KawaListener ) ((KawaListener)listener).enterQualifiedTypeName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KawaListener ) ((KawaListener)listener).exitQualifiedTypeName(this);
		}
	}

	public final QualifiedTypeNameContext qualifiedTypeName() throws RecognitionException {
		QualifiedTypeNameContext _localctx = new QualifiedTypeNameContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_qualifiedTypeName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			qualifiedTypeNameElement();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT_OPERATOR) {
				{
				{
				setState(117);
				match(DOT_OPERATOR);
				setState(118);
				qualifiedTypeNameElement();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QualifiedTypeNameElementContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(KawaParser.IDENTIFIER, 0); }
		public QualifiedTypeNameElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedTypeNameElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KawaListener ) ((KawaListener)listener).enterQualifiedTypeNameElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KawaListener ) ((KawaListener)listener).exitQualifiedTypeNameElement(this);
		}
	}

	public final QualifiedTypeNameElementContext qualifiedTypeNameElement() throws RecognitionException {
		QualifiedTypeNameElementContext _localctx = new QualifiedTypeNameElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_qualifiedTypeNameElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QualifiedmemberNameElementContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(KawaParser.IDENTIFIER, 0); }
		public QualifiedmemberNameElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedmemberNameElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KawaListener ) ((KawaListener)listener).enterQualifiedmemberNameElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KawaListener ) ((KawaListener)listener).exitQualifiedmemberNameElement(this);
		}
	}

	public final QualifiedmemberNameElementContext qualifiedmemberNameElement() throws RecognitionException {
		QualifiedmemberNameElementContext _localctx = new QualifiedmemberNameElementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_qualifiedmemberNameElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportsDeclarationContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(KawaParser.IMPORT, 0); }
		public QualifiedTypeNameContext qualifiedTypeName() {
			return getRuleContext(QualifiedTypeNameContext.class,0);
		}
		public List<TerminalNode> OF_OERATOR() { return getTokens(KawaParser.OF_OERATOR); }
		public TerminalNode OF_OERATOR(int i) {
			return getToken(KawaParser.OF_OERATOR, i);
		}
		public QualifiedmemberNameElementContext qualifiedmemberNameElement() {
			return getRuleContext(QualifiedmemberNameElementContext.class,0);
		}
		public ImportRenameContext importRename() {
			return getRuleContext(ImportRenameContext.class,0);
		}
		public ImportsDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importsDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KawaListener ) ((KawaListener)listener).enterImportsDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KawaListener ) ((KawaListener)listener).exitImportsDeclaration(this);
		}
	}

	public final ImportsDeclarationContext importsDeclaration() throws RecognitionException {
		ImportsDeclarationContext _localctx = new ImportsDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importsDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(IMPORT);
			setState(129);
			qualifiedTypeName();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OF_OERATOR) {
				{
				setState(130);
				match(OF_OERATOR);
				setState(131);
				match(OF_OERATOR);
				setState(132);
				qualifiedmemberNameElement();
				}
			}

			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(135);
				importRename();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportRenameContext extends ParserRuleContext {
		public TerminalNode AS() { return getToken(KawaParser.AS, 0); }
		public TerminalNode IDENTIFIER() { return getToken(KawaParser.IDENTIFIER, 0); }
		public ImportRenameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importRename; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KawaListener ) ((KawaListener)listener).enterImportRename(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KawaListener ) ((KawaListener)listener).exitImportRename(this);
		}
	}

	public final ImportRenameContext importRename() throws RecognitionException {
		ImportRenameContext _localctx = new ImportRenameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importRename);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(AS);
			setState(139);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(KawaParser.IDENTIFIER, 0); }
		public PackageNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KawaListener ) ((KawaListener)listener).enterPackageName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KawaListener ) ((KawaListener)listener).exitPackageName(this);
		}
	}

	public final PackageNameContext packageName() throws RecognitionException {
		PackageNameContext _localctx = new PackageNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_packageName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageDeclarationContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(KawaParser.PACKAGE, 0); }
		public PackageNameContext packageName() {
			return getRuleContext(PackageNameContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public EnumDeclarationContext enumDeclaration() {
			return getRuleContext(EnumDeclarationContext.class,0);
		}
		public StructDeclarationContext structDeclaration() {
			return getRuleContext(StructDeclarationContext.class,0);
		}
		public PackageDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KawaListener ) ((KawaListener)listener).enterPackageDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KawaListener ) ((KawaListener)listener).exitPackageDeclaration(this);
		}
	}

	public final PackageDeclarationContext packageDeclaration() throws RecognitionException {
		PackageDeclarationContext _localctx = new PackageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_packageDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(PACKAGE);
			setState(144);
			packageName();
			setState(145);
			match(T__0);
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(146);
				classDeclaration();
				}
				break;
			case 2:
				{
				setState(147);
				interfaceDeclaration();
				}
				break;
			case 3:
				{
				setState(148);
				enumDeclaration();
				}
				break;
			case 4:
				{
				setState(149);
				structDeclaration();
				}
				break;
			}
			setState(152);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompilationUnitContext extends ParserRuleContext {
		public PackageDeclarationContext packageDeclaration() {
			return getRuleContext(PackageDeclarationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(KawaParser.EOF, 0); }
		public List<ImportsDeclarationContext> importsDeclaration() {
			return getRuleContexts(ImportsDeclarationContext.class);
		}
		public ImportsDeclarationContext importsDeclaration(int i) {
			return getRuleContext(ImportsDeclarationContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KawaListener ) ((KawaListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KawaListener ) ((KawaListener)listener).exitCompilationUnit(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(154);
				importsDeclaration();
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(160);
			packageDeclaration();
			setState(161);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
